Implement Allow List for bots (#834)