@@ -19,6 +19,7 @@ import de.chojo.repbot.config.Configuration;
 import de.chojo.repbot.config.elements.MagicImage;
 import de.chojo.repbot.dao.access.guild.settings.Settings;
 import de.chojo.repbot.dao.access.guild.settings.sub.Reputation;
+import de.chojo.repbot.dao.access.guild.settings.sub.integrationbypass.Bypass;
 import de.chojo.repbot.dao.provider.GuildRepository;
 import de.chojo.repbot.dao.snapshots.ReputationLogEntry;
 import de.chojo.repbot.service.RoleAssigner;
@@ -42,6 +43,7 @@ import java.time.temporal.ChronoUnit;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -81,7 +83,7 @@ public class ReputationService {
      * @param context    triggered message
      * @param refMessage reference message if present
      * @param type       type of reputation source
-     * @return true if the reputation was counted and is valid
+     * @return {@link SubmitResult} indicating the success of the submission
      */
     public SubmitResult submitReputation(
             Guild guild,
@@ -93,9 +95,24 @@ public class ReputationService {
         var repGuild = guildRepository.guild(guild);
         log.trace("Submitting reputation for message {} of type {}", context.getIdLong(), type);
         if (receiver == null) return SubmitResult.of(SubmitResultType.NO_RECEIVER);
+
+        Optional<Bypass> optBypass = Optional.empty();
+
         // block bots
+        if (donor.getUser().isBot()) {
+            boolean notEntitled = Premium.isNotEntitled(
+                    repGuild.subscriptions(),
+                    configuration.skus().features().integrationBypass().allow());
+            if (notEntitled) {
+                log.trace("Author of {} is bot.", context.getIdLong());
+                return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+            }
+            optBypass = repGuild.settings().integrationBypass().getBypass(donor.getIdLong());
+            if (optBypass.isEmpty()) return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+            if (!optBypass.get().isEnabled(type)) return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
+        }
+
         if (receiver.getUser().isBot()) {
-            log.trace("Author of {} is bot.", context.getIdLong());
             return SubmitResult.of(SubmitResultType.BLOCK_BOTS);
         }
 
@@ -133,7 +150,7 @@ public class ReputationService {
             return analyzer.log(context, SubmitResult.of(SubmitResultType.SELF_VOTE));
         }
 
-        var abuseResult = assertAbuseProtection(guild, donor, receiver, context, refMessage, messageContext);
+        var abuseResult = assertAbuseProtection(guild, donor, receiver, context, refMessage, messageContext, optBypass);
         if (abuseResult.type() != SubmitResultType.SUCCESS) return abuseResult;
 
         return log(guild, donor, receiver, context, refMessage, type, settings);
@@ -166,7 +183,7 @@ public class ReputationService {
                     "listener.reputation.log.bulkdelete", guild, Replacement.create("CHANNEL", channel.getAsMention()));
             deleted = title + "\n" + deleted;
         } else {
-            deleted = LogFormatter.formatMessageLogEntrySimple(context, entries.get(0)) + " **|** "
+            deleted = LogFormatter.formatMessageLogEntrySimple(context, entries.getFirst()) + " **|** "
                     + channel.getAsMention();
         }
 
@@ -232,26 +249,28 @@ public class ReputationService {
     }
 
     private MessageContext getContext(
-            Member donor, @Nullable Member receiver, ReputationContext context, ThankType type, Settings settings) {
+            Member donor, @NotNull Member receiver, ReputationContext context, ThankType type, Settings settings) {
         MessageContext messageContext;
         if (type == ThankType.REACTION) {
             // Check if user was recently seen in this channel.
             messageContext = contextResolver.getCombinedContext(donor, context.asMessage(), settings);
         } else {
-            messageContext = context.getLastMessage()
+            messageContext = context.getLastValidMessage()
                     .map(message -> contextResolver.getCombinedContext(message, settings))
                     .orElseGet(() -> contextResolver.getCombinedContext(receiver));
         }
         return messageContext;
     }
 
+    @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
     private SubmitResult assertAbuseProtection(
             Guild guild,
             Member donor,
             Member receiver,
             ReputationContext context,
             @Nullable Message refMessage,
-            MessageContext messageContext) {
+            MessageContext messageContext,
+            Optional<Bypass> optBypass) {
         var contextId = context.getIdLong();
         var repGuild = guildRepository.guild(guild);
         var analyzer = repGuild.reputation().analyzer();
@@ -259,7 +278,9 @@ public class ReputationService {
         var abuseSettings = settings.abuseProtection();
 
         // Abuse Protection: target context
-        if (!messageContext.members().contains(receiver) && abuseSettings.isReceiverContext()) {
+        if (!messageContext.members().contains(receiver)
+                && abuseSettings.isReceiverContext()
+                && !optBypass.map(Bypass::ignoreContext).orElse(false)) {
             log.trace("Receiver is not in context of {}", contextId);
             return analyzer.log(
                     context,
@@ -267,7 +288,9 @@ public class ReputationService {
         }
 
         // Abuse Protection: donor context
-        if (!messageContext.members().contains(donor) && abuseSettings.isDonorContext()) {
+        if (!messageContext.members().contains(donor)
+                && abuseSettings.isDonorContext()
+                && !optBypass.map(Bypass::ignoreContext).orElse(false)) {
             log.trace("Donor is not in context of {}", contextId);
             return analyzer.log(
                     context, SubmitResult.of(SubmitResultType.DONOR_NOT_IN_CONTEXT, Replacement.createMention(donor)));
@@ -275,7 +298,8 @@ public class ReputationService {
 
         // Abuse protection: Cooldown
         var canGiveReputation = checkCooldown(context, donor, receiver, guild, settings);
-        if (canGiveReputation.type() != SubmitResultType.SUCCESS) {
+        if (canGiveReputation.type() != SubmitResultType.SUCCESS
+                && !optBypass.map(Bypass::ignoreCooldown).orElse(false)) {
             log.trace("Cooldown active on {}", contextId);
             return canGiveReputation;
         }
@@ -304,7 +328,8 @@ public class ReputationService {
             return analyzer.log(context, SubmitResult.of(SubmitResultType.RECEIVER_LIMIT));
         }
 
-        if (abuseSettings.isDonorLimit(donor)) {
+        if (abuseSettings.isDonorLimit(donor)
+                && !optBypass.map(Bypass::ignoreLimit).orElse(false)) {
             log.trace("Donor limit is reached on {}", contextId);
             return analyzer.log(context, SubmitResult.of(SubmitResultType.DONOR_LIMIT));
         }
